--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -14,6 +14,10 @@ body {
   color: $base-text;
 }
 
+pre {
+  white-space: pre-wrap;
+}
+
 h1 {
   font-weight: 700;
 }
@@ -30,17 +34,15 @@ h3 {
 
 #logo div {
   color: $base-text;
-  font-size:1.4em;
+  font-size: 1.4em;
   font-weight: 00;
 }
-#error-message{
+#error-message {
   color: $destrutive;
 }
 
 #footer div {
-    color:#ffffff;
-    font-weight: 600;
-    font-size:2em
+  color: #ffffff;
+  font-weight: 600;
+  font-size: 2em;
 }
-
-
